Fix spacing

--- a/src/scss/vapor/main-site.scss
+++ b/src/scss/vapor/main-site.scss
@@ -91,6 +91,14 @@
     }
 }
 
+.used-by-item {
+    margin-bottom: 32px;
+
+    @include media-breakpoint-down(lg) {
+        margin-bottom: 16px;
+    }
+}
+
 .used-by-icon {
     display: block;
     overflow: hidden;
